# cookiecutter-pypackage

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  azure-pipelines.yml  make.bat  mkdocs.yml  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  setup.py
{{cookiecutter.project_slug}}/docs/: api.md  commands.md  conf.py  index.md  release-notes.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  __main__.py  module.py
{{cookiecutter.project_slug}}/tests/: test_main.py  test_module.py
