[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
authors = [
    { name = "{{ cookiecutter.full_name }}", email = "{{ cookiecutter.email }}" },
]
description = "{{ cookiecutter.project_short_description }}"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8",
    "fastunits>=0.2.7",
    "numpy>=1.24",
    "rich-click>=1.8",
]

[project.urls]
documentation = "{{ cookiecutter.docs_url }}"
repository = "{{ cookiecutter.repo_url }}"

[project.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = [
    "B",    # bugbear
    "B9",   # bugbear's opinionated warnings
    "C",    # mccabe
    "C4",   # comprehensions
    "E",    # pycodestyle
    "F",    # pyflakes
    "FURB", # refurb
    "G",    # logging-format
    "I",    # isort
    "PD",   # pandas-vet
    "PT",   # pytest-style
    "PTH",  # flake8-use-pathlib
    "Q",    # quotes
    "RSE",  # raise
    "S",    # bandit
    "SIM",  # simplify
    "T10",  # debugger
    "W",    # pycodestyle
]

[tool.ruff.per-file-ignores]
# bandit to ignore test assert statements
"tests/*" = ["S101"]

[tool.uv]
# tells uv to use subprocess mode for this keyring provider
keyring-provider = "subprocess"

[tool.uv.sources]
fastunits = { index = "ado" }

[[tool.uv.index]]
name = "ado"
url = "https://pkgs.dev.azure.com/technipfmc-dev/SubseaDesign/_packaging/SubseaDesignFeed/pypi/simple/"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.2",
    "pytest>=8.3",
    "pytest-cov>=6",
    "ruff>=0.12",
]
docs = [
    "myst-parser>=4",
    "pydata-sphinx-theme>=0.16",
    "sphinx>=8.1",
    "sphinx-autobuild>=2024.10",
    "sphinx-click>=6",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.6",
]
